service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
spec:
  type : ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend-app
